# nibb

./: Cargo.toml  LICENSE-APACHE.md  LICENSE-MIT.md  README.md  build.rs  cbindgen.toml
docs/: config.md  ffi.md
include/: nibb.h
src/: errors.rs  fs.rs  lib.rs  main.rs  result.rs
src/cli/: arguments.rs  cli.rs  command.rs  execute.rs  mod.rs
src/config/: config.rs  settings.rs
src/ffi/: ffi.rs  ffi_utils.rs  mod.rs  utils.rs
src/git/: git_integration.rs  mod.rs
src/integration/: git.rs  mod.rs  utils.rs
src/snippets/: file_type.rs  manager.rs  mod.rs  repo.rs  snippet.rs  storage.rs  utils.rs
src/utils/: clipboard.rs  fs.rs  markers.rs  mod.rs  os.rs  ui.rs
tests/: test_insert.txt  tests.rs
