[package]
name = "nibb"
version = "0.3.0"
edition = "2024"

[dependencies]
clap = {version = "4.5.40", features = ["derive"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
crossterm = "0.29.0"
tempfile = "3.20.0"
anyhow = "1.0.98"
arboard = "3.6.0"
dialoguer = "0.11.0"
toml = "0.8.23"
which = "8.0.0"
fuzzy-matcher = "0.3.7"
chrono = "0.4.41"
rusqlite = {version = "0.36.0", features = ["bundled"]}