[package]
name = "nibb"
version = "0.1.0"
edition = "2024"


[lib]
name = "nibb_core"
crate-type = ["lib", "cdylib"]

[dependencies]
clap = {version = "4.5.40", features = ["derive"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dirs = "6.0.0"
chrono = {version = "0.4.41", features = ["serde"]}
thiserror = {version = "2.0.12"}
toml = "0.9.0"
slug = "0.1.6"
infer = "0.19.0"
anyhow = "1.0.98"
colored = {version = "3.0.0", optional = true}
tempfile = "3.20.0"

[build-dependencies]
cbindgen = "0.29.0"


[features]
ansi = ["colored"]